# CTF_Playbook

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
ctf_playbook/: __init__.py  __main__.py  classifier.py  cli.py  config.py  db.py  fetcher.py  models.py  pipeline.py  taxonomy.py
ctf_playbook/gui/: __init__.py  app.py  data.py
ctf_playbook/gui/routes/: api.py  pages.py
ctf_playbook/gui/static/: app.js  style.css
ctf_playbook/gui/templates/: base.html  category.html  error.html  identify.html  index.html  recon.html  search.html  technique.html  tools.html
ctf_playbook/scrapers/: _base.py  _title_parser.py  blogs.py  ctftime.py  github.py  reddit.py
ctf_playbook/services/: __init__.py  builder.py  classifier.py  fetcher.py  gemini_classifier.py  matcher.py  runner.py
tests/: test_blogs.py  test_builder.py  test_config.py  test_db.py  test_fetcher.py  test_github_parser.py  test_matcher.py  test_models.py  test_title_parser.py
