[project]
name = "ctf-playbook"
version = "0.1.0"
description = "Scrape, index, and classify CTF writeups into a technique-based playbook"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
    "trafilatura>=1.8.0",
    "anthropic>=0.40.0",
    "rich>=13.7.0",
    "click>=8.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
ctf-playbook = "ctf_playbook.pipeline:cli"
