[project]
name = "ctf-playbook"
version = "0.1.0"
description = "Scrape, index, and classify CTF writeups into a technique-based playbook"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
    "trafilatura>=1.8.0",
    "rich>=13.7.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "jinja2>=3.1.0",
    "google-genai>=1.0.0",
]

[dependency-groups]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
ctf-playbook = "ctf_playbook.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
